yoga.css
/*
Small: < 600px
Medium: 600px - 1023px
Large: ≥ 1024px
*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: #3f2860;
    color: #40407a;
    font-family: Verdana, Arial, sans-serif;
}

#wrapper {
    display: flex;
    flex-direction: column;
    background-color: #3f2860;
    margin-left: auto;
    margin-right: auto;
}

header {
    background-color: #80cbc4;
    background-image: url(sunrise.jpg);
    background-repeat: no-repeat;
    height: 300px;
    background-size: 100% 100%;
}

header a {
    text-decoration: none;
    color: #fff;
}

nav {
    background-color: #fff;
    display: flex;
    justify-content: flex-end;
    font-weight: bold;
    padding: 15px;
    text-align: center;
    gap: 40px;
}

nav a {
    margin-bottom: 1em;
    padding: 1em;
    text-decoration: none;
    margin: 0;
}

nav a:link {
    color: #3f2860;
}

nav a:visited {
    color: #497777;
}

h1 {
    margin: auto;
    width: 90%;
    max-width: 1023px;
    padding-top: 40px;
    background-image: url(lighthouselogo.jpg);
    background-repeat: no-repeat;
    font-size: 38px;
}

main {
    display: block;
}

h2 {
    margin-bottom: 12px;
}

table,
td,
th {
    border: 1px solid #000;
    border-collapse: collapse;
}

tr,
td {
    height: 30px;
}

caption {
    font-weight: bold;
    font-size: 1.2em;
    margin-bottom: 10px;
}

tr:nth-of-type(even) {
    background-color: #dbe8e9;
}

form {
    padding: 13px;
    display: flex;
    flex-direction: column;
    gap: 15px;
    max-width: 625px;
}

form div {
    display: flex;
    flex-direction: row;
    justify-content: end;
    gap: 10px;
}

input,
textarea {
    display: block;
    width: 400px;
}

label {
    flex: 1;
    text-align: right;
}

input[type="submit"] {
    margin-left: 199px;
    width: 110px;
}

.list {
    margin-left: 42px;
}

.main {
    margin-left: 15px;
    margin-right: 15px;
    padding-left: 20px;
    padding-right: 20px;
}

.conteneur {
    margin-left: 25px;
    margin-right: 25px;
}

.table {
    margin: auto;
    margin-top: 10px;
}

.heure {
    width: 205px;
}

.cours {
    width: 485px;
}

.studio {
    font-style: italic;
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-top: 50px;
    padding-bottom: 40px;
    background-color: #f5f5f5;
    width: 90%;
    max-width: 1023px;
    margin: auto;
    flex-grow: 1;
}

.img {
    width: 100%;
    height: 280px;
}

#yogalounge {
    padding-bottom: 1em;
    padding-top: 1em;
    margin-left: 25px;
    margin-right: 25px;
    padding-bottom: 0;
}

footer {
    font-size: 0.6em;
    font-style: italic;
    text-align: center;
    margin-bottom: 35px;
}

@media (max-width: 1023px) {
    #wrapper {
        min-height: 100vh;
    }

    h1 {
        width: unset;
    }

    .container {
        width: 100%;
    }

    footer {
        margin-bottom: 0;
    }
}

@media (min-width: 600px) and (max-width: 1023px) {
    nav {
        gap: 35px;
        padding-top: 15px;
        padding-bottom: 15px;
        padding-right: 5px;
        padding-right: 5px;
    }

    header {
        height: 205px;
    }

    h1 {
        margin-left: 110px;
        font-size: 29px;
    }

    h2 {
        font-size: 25px;
    }

    td {
        padding-left: 5px;
    }

    form {
        width: 590px;
    }

    input,
    textarea {
        width: 365px;
    }

    .conteneur {
        margin-left: 35px;
        margin-right: 35px;
    }

    .heure {
        width: 160px;
    }

    .cours {
        width: 410px;
    }

    #yogalounge {
        margin-left: 35px;
        margin-right: 35px;
    }
}


@media (max-width: 600px) {
    nav {
        display: grid;
        grid-template-columns: 5.5fr 4.5fr;
        grid-template-rows: 1fr 1fr;
        align-items: center;
        gap: 0;
        padding-top: 15px;
        padding-bottom: 15px;
        padding-right: 100px;
    }

    nav a {
        margin-bottom: 1em;
        padding: 0;
    }

    header {
        height: 190px;
    }

    h1 {
        margin-left: 65px;
        font-size: 30px;
    }

    h2,
    p {
        padding-left: 10px;
    }

    td {
        padding-left: 5px;
    }

    form {
        padding-bottom: 0;
    }

    form div {
        display: flex;
        flex-direction: column;
        padding-left: 13px;
        gap: 0;
    }

    label {
        flex: 1;
        text-align: left;
    }

    input,
    textarea {
        display: block;
        width: 397px;
    }

    input[type="submit"] {
        margin-left: 13px;
        width: 397px;
    }

    .a {
        text-align: right;
        padding-right: 15px;
    }

    .main {
        margin-right: 30px;
    }

    .conteneur {
        margin-left: 30px;
        margin-right: 25px;
        margin-bottom: 1em;
    }

    .heure {
        width: 90px;
    }

    .cours {
        width: 210px;
    }

    #yogalounge {
        display: none;
    }
}

